[gd_scene load_steps=7 format=2]

[ext_resource path="res://script/menu_btn.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://theme/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.733333, 0.254902, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.733333, 0.254902, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.196078, 0.733333, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -489.0
margin_top = -306.0
margin_right = -244.0
margin_bottom = -231.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "REVERSI"

[node name="EnBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 154.0
margin_right = 180.0
margin_bottom = 201.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
text = "English"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="AnimationPlayer" parent="EnBtn"]
root_node = NodePath("../..")
anims/fade_in = SubResource( 2 )

[node name="ChBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = 158.0
margin_right = -204.0
margin_bottom = 205.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
text = "中文"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="AnimationPlayer" parent="ChBtn"]
root_node = NodePath("../..")
anims/fade_in = SubResource( 3 )

[connection signal="animation_finished" from="EnBtn/Fade" to="EnBtn" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="ChBtn/Fade" to="ChBtn" method="_on_AnimationPlayer_animation_finished"]
